fix tweet creation date overlaps and style improvements

--- a/frontend/src/app/pages/details-tweet/details-tweet.page.scss
+++ b/frontend/src/app/pages/details-tweet/details-tweet.page.scss
@@ -10,3 +10,7 @@
     font-weight: bold;
     color: var(--ion-color-danger-tint);
 }
+
+ion-card-title {
+    font-size: large;
+}
